--- a/style.css
+++ b/style.css
@@ -95,7 +95,8 @@
   box-sizing: border-box;
 }
 
-.navbar button {
+.navbar button {    
+  flex: 0 0 auto;
   width: 50px !important;
   height: 50px !important;
   padding: 0;
